<resources>
    <string name="app_name">Med-Manager</string>

    <string name="med_reminder_notification_title">Time for medication </string>
    <string name="med_reminder_notification_body">Your Health is important it is time to take your medication!</string>
    <string name="healh_msg">Health is wealth</string>
    <string name="internet_problem">Oops!! you are not connected to internet</string>
    <string name="search_activity_label">Search Medication</string>
    <string name="list_activity_label">List Medication</string>
    <string name="Add_activity_label">Add Medication</string>
    <string name="save_button_text">Save</string>
    <string name="end_date_text"> End Date</string>
    <string name="star_date_text"> Start Date</string>
    <string name="Med_description_text"> Description</string>
    <string name="Med_freq_text">Frequency</string>
    <string name="name_text">Name</string>
</resources>
